# template-manager

./: .gitignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json
src/: cli.ts
templates/astro-cloudflare-blog/: .gitignore  README.md  SETUP_GUIDE.md  package.json  pnpm-lock.yaml  turbo.json
templates/astro-cloudflare-blog/.github/workflows/: deploy.yml
templates/astro-cloudflare-blog/frontend/: .dev.vars.example  astro.config.mjs  drizzle.config.ts  package.json  wrangler.toml
templates/astro-cloudflare-blog/frontend/db/migrations/: 0000_initial.sql  0001_drop_legacy_slug.sql
templates/astro-cloudflare-blog/frontend/db/schema/: app.ts  auth.ts
templates/astro-cloudflare-blog/frontend/src/: env.d.ts  middleware.ts
templates/tauri-cloudflare-todo/: .gitignore  README.md  package.json  pnpm-lock.yaml
templates/tauri-cloudflare-todo/app/: index.html  package-lock.json  package.json
templates/tauri-cloudflare-todo/app/src/: router.tsx  styles.css
templates/tauri-cloudflare-todo/app/src-tauri/: Cargo.toml  tauri.conf.json
templates/tauri-cloudflare-todo/app/src-tauri/capabilities/: default.json
templates/tauri-cloudflare-todo/app/src-tauri/icons/: icon.icns
templates/tauri-cloudflare-todo/app/src-tauri/src/: main.rs
templates/tauri-cloudflare-todo/backend/: .dev.vars.example  drizzle.config.ts  package.json  tsconfig.json  wrangler.toml
templates/tauri-cloudflare-todo/backend/src/: auth.ts  db.ts  index.ts
templates/tauri-cloudflare-todo/docs/: dnd-strategy.md
templates/tauri-cloudflare-todo/scripts/: dev.mjs
(+40 files in other folders)
