[package]
name = "tauri-cloudflare-todo-app"
version = "0.1.0"
description = "Tauri Kanban app with Cloudflare backend"
authors = ["template-manager"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
